# mujoco-omniwheel-example

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  build  main.cc  run
model/: robot.xml
model/wheel/: assy-2.xml  assy.xml
setup/: setup_build_system.sh
